--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@lucia-auth/adapter-postgresql": "^3.1.2",
     "astro": "^5.1.2",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.3",
@@ -18,6 +19,7 @@
     "@types/pg": "^8.11.10",
     "drizzle-kit": "^0.30.1",
     "pg": "^8.13.1",
+    "tsx": "^4.19.2",
     "typescript": "^5.7.2"
   }
 }
