--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "astro": "^5.1.2",
+    "astro-htmx": "^1.0.6",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
+    "htmx.org": "^1.9.12",
     "jsonwebtoken": "^9.0.2",
     "postgres": "^3.4.5"
   },
